--- a/assets/css/custom/overrides/overrides.compiled.css
+++ b/assets/css/custom/overrides/overrides.compiled.css
@@ -10,3 +10,7 @@
   color: white !important;
   opacity: 1 !important;
 }
+
+.pagination .page-item .page-link {
+  border-radius: 50rem !important;
+}
